--- a/src/app/components/start-card/start-card.component.html
+++ b/src/app/components/start-card/start-card.component.html
@@ -2,7 +2,7 @@
   <mat-card-header>
     <mat-card-title>
       <div>
-      <div>Коллективные упражнения начнутся через 15:00</div>
+      <div>Коллективные упражнения начнутся через {{session.lostSeconds}}</div>
       <div> или </div>
       <div> начните индивидуальные упражнения прямо сейчас </div>
         </div>
