--- a/src/app/components/start-card/start-card.component.html
+++ b/src/app/components/start-card/start-card.component.html
@@ -1,15 +1,16 @@
 <mat-card class="start-card">
   <mat-card-header>
     <mat-card-title>
-      <div>
-      <div>Коллективные упражнения начнутся через {{session.lostSeconds}}</div>
-      <div> или </div>
-      <div> начните индивидуальные упражнения прямо сейчас </div>
-        </div>
+
     </mat-card-title>
   </mat-card-header>
   <mat-card-content>
-    <button mat-raised-button color="primary" routerLink="/exec">Начать сейчас</button>
+    <div class="body">
+      <div class="team-text">Коллективные упражнения начнутся через {{message}}</div>
+      <div class="team-or"> или </div>
+      <div class="team-start-now"> начните индивидуальные упражнения прямо сейчас </div>
+      <button class="start-btn" mat-raised-button color="primary" routerLink="exercises">Начать сейчас</button>
+    </div>
   </mat-card-content>
   <mat-card-actions>
   </mat-card-actions>
