--- a/src/app/components/start-card/start-card.component.html
+++ b/src/app/components/start-card/start-card.component.html
@@ -9,7 +9,7 @@
       <div class="team-text">Коллективные упражнения начнутся через {{message}}</div>
       <div class="team-or"> или </div>
       <div class="team-start-now"> начните индивидуальные упражнения прямо сейчас </div>
-      <button class="start-btn" mat-raised-button color="primary" routerLink="exercises">Начать сейчас</button>
+      <button class="start-btn" mat-raised-button color="primary" routerLink="/exercises">Начать сейчас</button>
     </div>
   </mat-card-content>
   <mat-card-actions>
