--- a/src/app/components/app-toolbar/app-toolbar.component.html
+++ b/src/app/components/app-toolbar/app-toolbar.component.html
@@ -1,3 +1,5 @@
 <mat-toolbar color="primary">
+    <mat-icon>supervisor_account</mat-icon> 
   <h1>myHealth</h1>
+  <mat-icon>settings</mat-icon>
 </mat-toolbar>
