--- a/src/app/components/app-toolbar/app-toolbar.component.html
+++ b/src/app/components/app-toolbar/app-toolbar.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary">
     <mat-icon>supervisor_account</mat-icon> 
   <h1>myHealth</h1>
-  <mat-icon>settings</mat-icon>
+  <a [routerLink]="settings"><mat-icon>settings</mat-icon></a> 
 </mat-toolbar>
