--- a/src/app/components/settings/settings.component.html
+++ b/src/app/components/settings/settings.component.html
@@ -4,13 +4,16 @@
     <mat-card-subtitle></mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
+     <div>Присылать уведомления только</div> 
     <mat-form-field>
-      <mat-select placeholder="C" (value)="from" name="hf" (change)="onChange()">
+      <mat-select placeholder="C" [(value)]="from" name="hf" (selectionChange)="onChange()">
         <mat-option *ngFor="let hf of hoursFrom" [value]="hf.value">
           {{hf.viewValue}}
         </mat-option>
       </mat-select>
-      <mat-select placeholder="По" (value)="to" name="ht" (change)="onChange()">
+    </mat-form-field>
+    <mat-form-field>
+      <mat-select placeholder="По" [(value)]="to" name="ht" (selectionChange)="onChange()">
         <mat-option *ngFor="let ht of hoursTo" [value]="ht.value">
           {{ht.viewValue}}
         </mat-option>
@@ -18,7 +21,7 @@
     </mat-form-field>
     <mat-divider>
     </mat-divider>
-    <mat-slide-toggle>Режим «Не беспокоить»</mat-slide-toggle>
+    <div><mat-slide-toggle>Режим «Не беспокоить»</mat-slide-toggle></div>
   </mat-card-content>
   <mat-card-actions>
   </mat-card-actions>
