--- a/src/app/components/app-toolbar/app-toolbar.component.html
+++ b/src/app/components/app-toolbar/app-toolbar.component.html
@@ -1,5 +1,6 @@
 <mat-toolbar color="primary">
+    <a routerLink="../"><mat-icon>reply</mat-icon></a> 
     <mat-icon>supervisor_account</mat-icon> 
   <h1>myHealth</h1>
-  <a [routerLink]="settings"><mat-icon>settings</mat-icon></a> 
+  <a routerLink="/settings"><mat-icon>settings</mat-icon></a> 
 </mat-toolbar>
