--- a/src/app/components/exercises-end/exercises-end.component.html
+++ b/src/app/components/exercises-end/exercises-end.component.html
@@ -4,7 +4,7 @@
       <img src="assets/images/end-of-exercises.png" alt="">
       <p>Вы выполнили все упражнения,
       теперь можно отдохнуть.</p>
-      <p>Возвращайтесь делать  упражнения через 14:36</p>
+      <p>Возвращайтесь делать  упражнения через <mh-start-time *ngIf="session" count="count" ender="redirectToExec()"></mh-start-time></p>
     </div>
   </mat-step>
   <ng-template matStepperIcon="number">
