--- a/src/app/components/settings/settings.component.html
+++ b/src/app/components/settings/settings.component.html
@@ -24,5 +24,7 @@
     <div><mat-slide-toggle [(checked)]="silentMode" (change)="onChange()">Режим «Не беспокоить»</mat-slide-toggle></div>
   </mat-card-content>
   <mat-card-actions>
+      myHealth ver 0.1 Pre-Alpha
+      Murano Hackathon 2018
   </mat-card-actions>
 </mat-card>
