--- a/src/app/components/exercises-end/exercises-end.component.scss
+++ b/src/app/components/exercises-end/exercises-end.component.scss
@@ -28,3 +28,12 @@ mat-horizontal-stepper {
     max-width: 100%;
   }
 }
+
+.button-container {
+  margin-top: 40px;
+}
+
+[mat-raised-button] {
+  border-radius: 20px;
+  text-transform: uppercase;
+}
