--- a/src/app/components/exercises-end/exercises-end.component.html
+++ b/src/app/components/exercises-end/exercises-end.component.html
@@ -5,6 +5,9 @@
       <p>Вы выполнили все упражнения,
       теперь можно отдохнуть.</p>
       <p>Возвращайтесь делать  упражнения через 14:36</p>
+      <p class="button-container">
+        <button mat-raised-button color="primary" routerLink="/start">Закончить</button>
+      </p>
     </div>
   </mat-step>
   <ng-template matStepperIcon="number">
