--- a/src/app/components/exercises-player/exercises-player.component.scss
+++ b/src/app/components/exercises-player/exercises-player.component.scss
@@ -22,6 +22,7 @@ mat-horizontal-stepper {
 }
 
 .step-instuctions {
+  margin-top: 80px !important;
   margin-bottom: 20px;
 
   text-align: center;
