--- a/src/app/components/settings/settings.component.html
+++ b/src/app/components/settings/settings.component.html
@@ -1,30 +1,39 @@
-<mat-card>
-  <mat-card-header>
-    <mat-card-title></mat-card-title>
-    <mat-card-subtitle></mat-card-subtitle>
-  </mat-card-header>
-  <mat-card-content>
-     <div>Присылать уведомления только</div> 
-    <mat-form-field>
-      <mat-select placeholder="C" [(value)]="from" name="hf" (selectionChange)="onChange()">
-        <mat-option *ngFor="let hf of hoursFrom" [value]="hf.value">
-          {{hf.viewValue}}
-        </mat-option>
-      </mat-select>
-    </mat-form-field>
-    <mat-form-field>
-      <mat-select placeholder="По" [(value)]="to" name="ht" (selectionChange)="onChange()">
-        <mat-option *ngFor="let ht of hoursTo" [value]="ht.value">
-          {{ht.viewValue}}
-        </mat-option>
-      </mat-select>
-    </mat-form-field>
-    <mat-divider>
-    </mat-divider>
-    <div><mat-slide-toggle [(checked)]="silentMode" (change)="onChange()">Режим «Не беспокоить»</mat-slide-toggle></div>
+<mat-card class="fill-remaining-height">
+  <mat-card-content class="settings-content">
+    <div class="settings-section">
+      <p class="title-label">Присылать уведомления только</p>
+      <mat-form-field>
+        <mat-select placeholder="C" [(value)]="from" name="hf" (selectionChange)="onChange()">
+          <mat-option *ngFor="let hf of hoursFrom" [value]="hf.value">
+            {{hf.viewValue}}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+      <span class="dash-seporator"> – </span>
+      <mat-form-field>
+        <mat-select placeholder="По" [(value)]="to" name="ht" (selectionChange)="onChange()">
+          <mat-option *ngFor="let ht of hoursTo" [value]="ht.value">
+            {{ht.viewValue}}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
+
+    <mat-divider></mat-divider>
+
+    <p class="settings-section">
+      <span class="setting-cols">
+        <label class="setting-left-col">Режим «Не беспокоить»</label>
+        <span class="setting-right-col">
+          <mat-slide-toggle color="primary" [(checked)]="silentMode" (change)="onChange()"></mat-slide-toggle>
+        </span>
+      </span>
+    </p>
+
+    <mat-divider></mat-divider>
   </mat-card-content>
-  <mat-card-actions>
-      myHealth ver 0.1 Pre-Alpha
+  <p class="settings-app-info">
+      myHealth ver 0.1 Pre-Alpha<br>
       Murano Hackathon 2018
-  </mat-card-actions>
+  </p>
 </mat-card>
