--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,7 +4,22 @@ html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 mh-root {
-  display: block;
+  display: flex;
+  flex-direction: column;
   max-width: 720px;
+  height: 100%;
   margin: auto;
+}
+
+.fill-remaining-height {
+  flex: 1 1 auto;
+  display: flex !important;
+  flex-direction: column;
+}
+
+.justify-content-middle {
+  display: flex !important;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
