--- a/src/app/components/settings/settings.component.html
+++ b/src/app/components/settings/settings.component.html
@@ -25,7 +25,7 @@
       <span class="setting-cols">
         <label class="setting-left-col">Режим «Не беспокоить»</label>
         <span class="setting-right-col">
-          <mat-slide-toggle color="primary" [(checked)]="silentMode" (change)="onChange()"></mat-slide-toggle>
+          <mat-slide-toggle color="primary" [(checked)]="silenceMode"  (change)="onChange()"></mat-slide-toggle>
         </span>
       </span>
     </p>
