--- a/src/app/components/exercises-player/exercises-player.component.html
+++ b/src/app/components/exercises-player/exercises-player.component.html
@@ -10,3 +10,7 @@
     </mat-card>
   </mat-step>
 </mat-horizontal-stepper>
+<audio
+  src="/assets/sounds/exercises.m4a"
+  class="audio-control"
+  #audioCtrl></audio>
